# pyproject-template

./: LICENSE  pyproject.toml
src/: __init__.py  utils.py
tests/: test_hello_world.py
