[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyproject_template"
version = "0.0.1"
authors = [
  { name="Eric Brahmann", email="eric.Brahmann@eed-solutions.de" },
]
description = "Template for Python Packages"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EED85/pyproject_template"
"Bug Tracker" = "https://github.com/EED85/pyproject_template/issues"
